--- a/mlab_bericht_alex_murray.tex
+++ b/mlab_bericht_alex_murray.tex
@@ -1,4 +1,4 @@
-\documentclass{fhnwreport/fhnwreport}
+\documentclass[notitlepage]{fhnwreport/fhnwreport}
 
 \input{preamble/packages}
 \input{preamble/title}
@@ -6,16 +6,21 @@
 \addbibresource{bibliography/bibliography.bib}
 
 \begin{document}
-    \input{titlepage/titlepage}
+    \maketitle
+    \input{sections/abstract}
+    \newpage
+
     \tableofcontents
+
     \twocolumn
+    \input{util/matlabcode}
     \input{sections/introduction}
     \input{sections/theory}
     \input{sections/simulations}
     \input{sections/results}
     \input{sections/discussion}
+
     \addcontentsline{toc}{section}{Literature}
     \printbibliography
 \end{document}
-
 
