--- a/preamble/title.tex
+++ b/preamble/title.tex
@@ -1,9 +1,20 @@
+\pretitle{\begin{center}\Huge\bfseries}
+\posttitle{\par\end{center}\vskip 0.5em}
+\preauthor{\begin{center}\Large\ttfamily}
+\postauthor{\end{center}}
+\predate{\par\large\centering}
+\postdate{\par}
+
 \author{%
-    Murray, Alex\\
-    \texttt{alexander.murray@students.fhnw.ch}
+    \vspace{5mm}
+    \texttt{Alexander Murray}\\
+    \vspace{2mm}
+    \small{\texttt{alexander.murray@students.fhnw.ch}}\\
+    \small{\texttt{alex.murray@gmx.ch}}
 }
 
 \title{
     \vspace{20mm}
-    \Huge{\textsc{Automated System Identification via Step Response}}
+    \Huge{\textsc{A Comparison of Linear Time-Invariant System Identification Techniques}}
 }
+
