--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,10 +1,23 @@
 \section{Introduction}
 
-There  are  many  ways  to  measure  and  identify a system and there  are  many
-different  systems  to  be measured. In this report we will confine ourselves to
-linear, time-invariant (LTI) systems only. Additionally,  we  will  also confine
-ourselves to systems with no overshoot or undershoot.
+The  need  to  identify the dynamic behaviour of an unknown, arbitrary system or
+\textit{plant}, as it is referred to in control theory, is a common problem. The
+plant's behaviour dictates  how  the \textit{controller} must behave in order to
+create  a  stable  \textit{control  loop}.  The  ability to  accurately  and  --
+preferrably  automatically  -- deduce this behaviour is crucial. Small errors in
+the identification process can lead to large deviations later on. Worse, it  can
+lead to unstable control loops.
 
-The two most common methods are elaborated in  detail. Furthermore, an extension
-to both methods involving a least squares fit will be proposed.
+There  are  many  ways  to  measure  and  identify  a  system and there are many
+different  classes  of systems to be measured. In this report  we  will  confine
+ourselves to linear, time-invariant  (LTI)  systems  only. Additionally, we will
+also  confine ourselves to systems  that  \textbf{don't}  exhibit  overshoot  or
+undershoot.
+
+The focus of this report will be the comparison of two fairly similar methods of
+system   identification   proposed   by    L.    Sani\cite{ref:sani}    and   P.
+Hudzovic\cite{ref:hudzovic}.
+
+Furthermore,  an extension to both methods involving a least squares fit will be
+proposed,  allowing  the  results  of   both  methods  to  be  further  refined.
 
