Writing more of report

--- a/preamble/packages.tex
+++ b/preamble/packages.tex
@@ -16,6 +16,9 @@
 \usepackage{pdfpages}
 \sisetup{output-exponent-marker=\ensuremath{\mathrm{E}}}
 
+% Labels per section
+\numberwithin{equation}{section}
+
 % For MATLAB code
 \usepackage{listings}
 \usepackage{color} %red, green, blue, yellow, cyan, magenta, black, white
