--- a/preamble/title.tex
+++ b/preamble/title.tex
@@ -7,10 +7,9 @@
 
 \author{%
     \vspace{5mm}
-    \texttt{Alexander Murray}\\
-    \vspace{2mm}
-    \small{\texttt{alexander.murray@students.fhnw.ch}}\\
-    \small{\texttt{alex.murray@gmx.ch}}
+    \normalfont{Alexander Murray}\\
+    \normalfont{\small{alexander.murray@students.fhnw.ch}}\\
+    \normalfont{\small{alex.murray@gmx.ch}}
 }
 
 \title{
