--- a/sections/theory/model.tex
+++ b/sections/theory/model.tex
@@ -24,9 +24,6 @@ the effort of which would greatly increase with the order $n$ -- the two methods
 of  P.  Hudzovic  and  L.  Sani instead calculate these constants using a common
 function $T_k(r)$.
 
-
-\subsubsection*{P. Hudzovic's Approach}
-
 The  approach  proposed  by  P.  Hudzovic\cite{ref:hudzovic}  for  $T_k(r)$  is:
 
 \begin{equation}
@@ -37,9 +34,6 @@ The  approach  proposed  by  P.  Hudzovic\cite{ref:hudzovic}  for  $T_k(r)$  is:
 where  the  constant  $r$ must be  confined  to  the  interval  $0  \le  r  \leq
 \frac{1}{n-1}$.
 
-
-\subsubsection*{L. Sani's Approach}
-
 The   approach   proposed   by   L.   Sani\cite{ref:sani}   for   $T_k(r)$   is:
 
 \begin{equation}
@@ -49,10 +43,7 @@ The   approach   proposed   by   L.   Sani\cite{ref:sani}   for   $T_k(r)$   is:
 
 where the constant $r$ must be confined to the interval $0 \leq r \le 1$.
 
-
-\subsubsection*{Common problem}
-
-As can be  seen,  in  both  cases,  the  problem  has  been  reduced  to finding
-appropriate values for  $n$,  $T$  and $r$ such that the step response of $G(s)$
-approximates  the  data  acquired  from  the  plant   as  closely  as  possible.
+As  can  be  seen,  in both cases, the  problem  has  been  reduced  to  finding
+appropriate values for  $n$,  $T$  and  $r$  such  that  the  step  response  of
+$G_n(s,r)$ approximates the data acquired from the plant as closely as possible.
 
